// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render small info Banner 1`] = `
<div
  className="banner__close banner__content--small banner__content--small--text banner--wrapper--info banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--small"
  >
    <InformationOutlineIcon
      fill="#4384f5"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 2`] = `
<div
  className="banner__close banner__content--large banner__content--large--text banner--wrapper--info banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--large"
  >
    <InformationOutlineIcon
      fill="#4384f5"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 3`] = `
<div
  className="banner__close banner__content--medium banner__content--medium--text banner--wrapper--info banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--medium"
  >
    <InformationOutlineIcon
      fill="#4384f5"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 4`] = `
<div
  className="banner__close banner__content--small banner__content--small--text banner--wrapper--warning banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--small"
  >
    <AlertIcon
      fill="#fb9d01"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 5`] = `
<div
  className="banner__close banner__content--large banner__content--large--text banner--wrapper--warning banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--large"
  >
    <AlertIcon
      fill="#fb9d01"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 6`] = `
<div
  className="banner__close banner__content--medium banner__content--medium--text banner--wrapper--warning banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--medium"
  >
    <AlertIcon
      fill="#fb9d01"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 7`] = `
<div
  className="banner__close banner__content--small banner__content--small--text banner--wrapper--success banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--small"
  >
    <CheckCircleIcon
      fill="#38c776"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 8`] = `
<div
  className="banner__close banner__content--large banner__content--large--text banner--wrapper--success banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--large"
  >
    <CheckCircleIcon
      fill="#38c776"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 9`] = `
<div
  className="banner__close banner__content--medium banner__content--medium--text banner--wrapper--success banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--medium"
  >
    <CheckCircleIcon
      fill="#38c776"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 10`] = `
<div
  className="banner__close banner__content--small banner__content--small--text banner--wrapper--error banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--small"
  >
    <BlockHelperIcon
      fill="#d64646"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 11`] = `
<div
  className="banner__close banner__content--large banner__content--large--text banner--wrapper--error banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--large"
  >
    <BlockHelperIcon
      fill="#d64646"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;

exports[`Banner should render small info Banner 12`] = `
<div
  className="banner__close banner__content--medium banner__content--medium--text banner--wrapper--error banner--wrapper banner"
>
  <CloseIcon
    className="banner--icon__close"
    data-test="banner-close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
  <div
    className="banner__content--medium"
  >
    <BlockHelperIcon
      fill="#d64646"
      height="20px"
      width="20px"
    />
    <p>
      Example text
    </p>
  </div>
</div>
`;
